added input character limit to inputs

--- a/HMS/templates/2_patienthome.html
+++ b/HMS/templates/2_patienthome.html
@@ -21,7 +21,7 @@
         </button>
 
         <div class="Doctor_Name">
-            <input type="text" class="doctorNameInput" placeholder="Name Of Patient" readonly>
+            <input type="text" class="doctorNameInput" placeholder="Name Of Patient" maxlength="30" readonly>
             <img src="../static/public/user.svg" alt="User">
         </div>
     </div>
