--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -89,7 +89,7 @@
             <div class="head">For any queries</div>
             <div class="form">
                 <form onsubmit="return validateForm()" action="" method="POST" name="form1">
-                <input type="email" placeholder="Enter email" value="" name="email">
+                <input type="email" placeholder="Enter email" value="" name="email" maxlength="30">
                 <input type="submit">
                 </form>
             </div>
