--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -204,7 +204,7 @@
                             <div class="t">Doctor's Verdict</div>
                         </div>
                         <div>
-                            <textarea class="whitebox" name="DoctorVerdict" id=""></textarea>
+                            <textarea class="whitebox" name="DoctorVerdict" id="" maxlength="200"></textarea>
                         </div>
                     </div>
                     <br><br>
@@ -214,7 +214,7 @@
                             <div class="t">Prescription</div>
                         </div>
                         <div > 
-                            <textarea class="whitebox" name="Prescription" id=""></textarea>
+                            <textarea class="whitebox" name="Prescription" id="" maxlength="200"></textarea>
                             <!-- <input type="text" class="whitebox"> -->
                         </div>
                     </div>
