--- a/HMS/templates/form_heart.html
+++ b/HMS/templates/form_heart.html
@@ -39,7 +39,7 @@
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID" required>
+                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID" required maxlength="30">
             </div>
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
@@ -69,19 +69,19 @@
                 </div>
                 <div class="grid-container">
                     <div class="grid-item" id="grid-item1">
-                        <div>Systolic Blood Pressure</div><input type="number" class="input2" name="SystolicBP" id="" required>
+                        <div>Systolic Blood Pressure</div><input type="number" class="input2" name="SystolicBP" id="" required maxlength="5">
                     </div>
 
                     <div class="grid-item" id="grid-item2">
-                        <div>Diastolic Blood Pressure</div><input type="number" class="input2" name="DiastolicBP" id="" required>
+                        <div>Diastolic Blood Pressure</div><input type="number" class="input2" name="DiastolicBP" id="" required maxlength="5">
                     </div>
                     
                     <div class="grid-item" id="grid-item3">
-                        <div>Cholestrol</div><input type="number" placeholder="mg/dL" class="input2" name="CholestrolLevel" id="" required>
+                        <div>Cholestrol</div><input type="number" placeholder="mg/dL" class="input2" name="CholestrolLevel" id="" required maxlength="5">
                     </div>
                     
                     <div class="grid-item" id="grid-item4">
-                        <div>Glucose Level</div><input type="number" placeholder="mg/dL" class="input2" name="GlucoseLevel" id="" required>
+                        <div>Glucose Level</div><input type="number" placeholder="mg/dL" class="input2" name="GlucoseLevel" id="" required maxlength="5">
                     </div>
                     
                     <div class="grid-item" id="grid-item5">
@@ -113,15 +113,15 @@
                     </div>
 
                     <div class="grid-item" id="grid-item7">
-                        <div>Age</div><input type="number" class="input2" name="Age" id="" required>
+                        <div>Age</div><input type="number" class="input2" name="Age" id="" required maxlength="4">
                     </div>
 
                     <div class="grid-item" id="grid-item8">
-                        <div>Height</div><input type="number" placeholder="cm" class="input2" name="Height" id="" required>
+                        <div>Height</div><input type="number" placeholder="cm" class="input2" name="Height" id="" required maxlength="5">
                     </div>
 
                     <div class="grid-item" id="grid-item9">
-                        <div>Weight</div><input type="number" placeholder="kg" class="input2" name="Weight" id="" required>
+                        <div>Weight</div><input type="number" placeholder="kg" class="input2" name="Weight" id="" required maxlength="4">
                     </div>
                     <!-- </div> -->
                 </div>
