--- a/HMS/static/css/homepage.css
+++ b/HMS/static/css/homepage.css
@@ -20,36 +20,37 @@ body{
   display: flex;
   flex-direction: column;
   width: 87.5vw;
-  height: 666px;
+  height: 48vw;
   border-radius: 75px;
   margin:auto;
   margin-top: 43px;
   background-color:#eaeaea;
   z-index: 0;
 }
+.company-icon img{
+  width: 4.8vw;
+}
 .logoname{
-  width:63px;
-  height:23px;
+  text-align: center;
+  width:4.2vw;
   color: #000;
   font-weight: 600;
-  font-size: 20px;
-  margin-left: 5px;
-  margin-top: 5px;
+  font-size: 1.4vw;
   font-family: "MADEEvolveSansEVO";
 }
 .logoandname{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 .navbar{
   position: relative;
-  margin-top: 52px;
+  margin-top: 5vw;
   display: flex;
-  height: 97px;
-  width: 74vw; 
-  margin-left: 95px;
-  margin-right: 105px; 
+  height: 10vw;
+  width: 74vw;
+  margin-left: 7.5vw;
+  margin-right: 105px;
   align-items: center;
 }
 .nav{
@@ -59,39 +60,39 @@ body{
 }
 .nav a{
   text-decoration: none;
-  font-size: 16px;
-  padding-left: 103px;
+  font-size: 1.4vw;
+  padding-left: 5vw;
   font-weight: 600;
   color: #170808;
 }
 .diagnostic{
   display: flex;
-  margin-left: 85px;
-  margin-top: 70px;
-  width: 64vw;
+  margin-left: 7vw;
+  margin-top: 4vw;
+  width: 60vw;
   height: 291px;
   color: #141111;
   font-family: volko;
-  font-size: 128px;
+  font-size: 8vw;
   font-weight: 200;
   line-height: 100%;
 }
 .shapefuture{
   position: absolute;
-  left: 95.41px;
-  top: 546px;
-  width: 419.658px;
+  left: 7vw;
+  top: 40vw;
+  width: 30vw;
   height: 101px;
-  font-size: 16px;
+  font-size: 1.3vw;
   font-weight: 400;
 }
 .est{
   position: absolute;
   color: #000;
-  right: 187px;
-  top: 546px;
-  width: 68.728px;
-  font-size: 16px;
+  right: 10vw;
+  top: 37vw;
+  width: 10vw;
+  font-size: 1.2vw;
   font-weight: 400;
 }
 .rectangle6{
@@ -104,8 +105,7 @@ body{
   display: flex;
   position: relative;
   align-items: center;
-  width: 87.5vw;
-  height: 100px;
+  height: 7vw;
   border-radius: 20px;
   background-color: #0067FF;
   color: #FFF;
@@ -115,30 +115,27 @@ body{
 }
 .rectangle6 .text{
   font-family: volko;
-  font-size: 40px;
+  font-size: 2.8vw;
   font-weight: 200;
-  padding-left: 95px;
-}
-.rectangle6 .heart{
-  position: absolute;
-  width: 22vw;
-  right: 26%;
-  top: -140px;
-  border-radius: 45px;
-  z-index: 2;
+  padding-left: 7vw;
 }
 .rectangle6 img{
-  width: 100%;
-  height: auto;
+   position: absolute;
+  width: 22vw;
+  height: 22vw;
+  right: 26%;
+  top: -9.3vw;
+  z-index: 2; 
+  color: black;
 }
 .rectangle6 .background{
   position: absolute;
   right: 26%;
-  top: -140px;
+  top: -9.3vw;
   width: 22vw;
   height: 22vw;
   border-radius: 395px;
-  background: #C75050;
+  background: #c04343;
   filter: blur(94px);
   z-index: 0;
 }
@@ -147,7 +144,7 @@ body{
 /* Our Models */
 
 .line{
-  margin-top: 146px;
+  margin-top: 2vw;
   background-color: black;
   height: 1px;
   width: 100vw;
@@ -156,9 +153,9 @@ body{
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 107px;
+  margin-top: 6.4vw;
   width: 72.2vw;
-  height: 536px;
+  height: 50vw;
 }
 .ourmodels .head{
   justify-content: center;
@@ -166,33 +163,33 @@ body{
   margin: auto;
   margin-top: 0px;
   margin-bottom: 0px;
-  width: 42%;
+  width: 100%;
   height: 63px;
   color: #000;
   font-family: Montserrat Alternates;
-  font-size: 70px;
+  font-size: 5vw;
   font-weight: 500;
 }
 .rect{
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 40px;
+  font-size: 3vw;
   border-radius: 16px;
   color: #F9F9F9;
   background-color: #0067FF;
   width: 49%;
-  height: 170px;
+  height: 11vw;
 }
 .rect20and21{
-  margin-top: 96px;
+  margin-top: 6.4vw;
+  margin-bottom: 10px;
   display: flex;
   width: 100%;
-  height: 170px;
+  height: 14vw;
   gap: 20px;
 }
 .rect22and23{
-  margin-top: 37px;
   display: flex;
   width: 100%;
   height: 170px;
@@ -201,9 +198,11 @@ body{
 
 
 /* about us  */
+
+
 .aboutus{
   width: 86.5vw;
-  height: 503px;
+  height: 43vw;
   display: flex;
   margin: auto;
   margin-top: 75px;
@@ -219,18 +218,18 @@ body{
   height: 63px;
   color: #000;
   font-family: Montserrat Alternates;
-  font-size: 70px;
+  font-size: 5vw;
   font-weight: 500;
 }
 .rect24{
   display: flex;
   margin: auto;
-  margin-top: 64px;
+  margin-top: 3vw;
   gap: 7.7vw;
 }
 .rect24 .text{
   width: 43.7vw;
-  font-size: 29px;
+  font-size: 2.05vw;
 }
 .rect24 .doctorpatient{
   position: relative;
@@ -267,46 +266,50 @@ body{
   .contactandlogo .head{
     margin-left: 2.5vw;
     font-family: Montserrat Alternates;
-    font-size: 40px;
+    font-size: 3vw;
     font-style: normal;
     font-weight: 500;
   }
   .queries{
+    position: relative;
     color: #FFF;
     width: 86.8vw;
-    height: 273px;
-    align-items: center;
+    height: 20vw;
     margin: auto;
     margin-top: 56px;
     display: flex;
     border-radius: 45px;
     background: #0067FF;
+    justify-content: space-between;
+    align-items: center;
   }
   .enteremail{
+    margin-left: 3vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+  .enteremail .head{
+    font-size: 1.3vw;
+  }
   .enteremail form{
     display: flex;
     flex-direction: column;
-    margin-left: 90px;
-    margin-right: 20px;
   }
   .form input{
     background:#D9D9D9;
     border-width: 0px;
-    height: 54px;
-    border-radius: 64px;
-    font-size: 32px;
+    height: 3.5vw;
+    border-radius: 3vw;
+    font-size: 1.6vw;
     text-align: center;
   }
   form input::placeholder{
     color:#000;
   }
   .form input[type=email]{
-    background:#D9D9D9 ;
+    background:#D9D9D9;
     margin-top: 22px;
     width: 20.7vw;
     margin-bottom: 22px;
@@ -318,14 +321,30 @@ body{
     color: #000;
     width: 20.7vw;
   }
-  .enteremail .text{
-    font-size: 20px;
+  .typequery textarea{
+    font-size: 1.4vw;
+    width: 32vw;
+    height: 10vw;
+    border-radius: 10px;
+    background: #D9D9D9;
+    border: none;
+    resize: none;
+  }
+  .typequery textarea::-webkit-input-placeholder{
+    font-size: 1.6vw;
+    position:absolute;
+    top: 0.6vw;
+    left: 0.6vw;
+  }
+  .typequery textarea:focus::placeholder{
+    color: transparent;
   }
   .emailandnumber{
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
-    font-size: 20px;
-    gap: 29px;
+    font-size: 1.6vw;
+    gap: 1.5vw;
   }
   .emailandnumber .phone{
     display: flex;
@@ -335,37 +354,75 @@ body{
     display: flex;
     align-items: center;
   }
+  .emailandnumber svg{
+    width: 1.9vw;
+  }
   
 
   /* footer */
 
-footer{
-  position: absolute;
+.footer{
+  position: relative;
   display: flex;
   width: 100vw;
   height: 65px;
   background: #0067FF;
-  align-items: center;
   margin-top: 58px;
+  align-items: center;
 }
 
 .copyright{
-  margin-top: 10px;
-  color: #FFFFFF;
   display: flex;
+  color: #FFF;
   align-items: center;
-  font-size: 24px;
+  font-size: 1.3vw;
   margin-left: 143px;
-  line-height: 100%;
 }
 .atr-icon{
   margin-bottom: 10px;
   margin-right: 2px;
 }
+.atr-icon svg{
+  width: 1.3vw;
+}
 .icons{
-  margin-left: 450px;
+  position: absolute;
+  right: 4vw;
+  margin-left: 30vw;
   display: flex;
-  gap: 34px;
+  gap: 2.2vw;
   justify-content: center;
   align-items: center;
+}
+.icons svg{
+  width: 4.2vw;
+}
+
+@media screen and (max-width:1024px){
+  .emailandnumber{
+    gap: 1vw;
+  }
+}
+@media screen and (max-width:768px){
+  .emailandnumber{
+    gap: 0px;
+  }
+  .enteremail{
+    justify-content:center;
+  }
+  .enteremail .head{
+    margin-top: 1vw;
+  }
+  .form input[type=email]{
+    margin-top: 1.4vw;
+    margin-bottom: 1.4vw;
+  }
+}
+@media screen and (max-width:600px){
+  .phone,.email{
+    height: 3vw;
+  }
+  .emailandnumber{
+    margin-left: 5px;
+  }
 }
