--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -13,7 +13,7 @@
 <body>
     
     <div class="navbar">
-        <a href="./homepage.html" class="logo">
+        <a href="./homepage" class="logo">
             <img src="../static/public/logo.svg" alt="">
             <div class="logoname">
                 MED.AI
