--- a/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
@@ -12,7 +12,6 @@ body{
     overflow-x: hidden;
     /* height: 2000px; */
 }
-
 .background1{
     width: 38vw;
     height: 38vw;
@@ -32,7 +31,7 @@ body{
     filter: blur(200px);
     /* transform: rotate(90deg); */
     left: -8vw;
-    top: 700px;
+    top: 500px;
     z-index: -1;
 }
 .logo{
@@ -75,7 +74,7 @@ body{
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     width:8.4vw;
     height:29px;
@@ -103,7 +102,7 @@ body{
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 400;
     width:13vw;
     height:29px;
@@ -132,34 +131,15 @@ body{
     font-size: 90px;
     line-height: 100%; /* line height -> sets distance between lines of text*/
 }
-
-.ellipse10{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32.8vw;
-    height: 32.8vw;
-    border-radius: 32.8vw;
-    background: #D9D9D9;
-    margin-top:53px;
-}
-.ellipse11{
-    height: 30vw;
-    width: 30vw;
-    border-radius: 30vw;
-    background: #FFF;
-    justify-content: center;
-    align-items: center;
-}
-
-.HDisease_Prediction>img{
-    display: inline-flex;
-    width:21.12vw;
+.HDisease_Prediction{
+    width:32.7vw;
     height:24.5vw;
     align-items: center;
     flex-shrink: 0;
-    margin-top:2.8vw;
-    margin-left:4.41vw;
+    margin-top:53px;
+}
+.HDisease_Prediction img{
+    width: 100%;
 }
 
 
@@ -226,14 +206,15 @@ body{
 
 .grid-item div{
     text-align: center;
-    word-break: break-all;
+    word-break: normal;
+    white-space: wrap;
 }
 .grid-item .input2{
     text-align: center;
     display: flex;
     position: absolute;
     bottom: 40px;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     width: 8.8vw;
     height: 43px;
@@ -241,6 +222,10 @@ body{
     border-radius: 15px;
     background: #FFF;
     border:none;
+}
+.grid-item .input2::placeholder{
+    font-size: 20px;
+    color: #bab6b6;
 }
 .grid-item .dropdown{
     width: 8.8vw;
@@ -268,6 +253,7 @@ body{
     display: flex;
     margin: auto;
     margin-top: 70px;
+    margin-bottom: 50px;
     gap: 1.3vw;
 }
 .button1{
@@ -300,6 +286,7 @@ body{
 .Prediction2{
     display: flex;
     gap:15px;
+    align-items: center;
 }
 .GIF img{
     background-color: #FFF;
@@ -309,13 +296,27 @@ body{
     height:132px;
 }
 
-.Box1 input{
+.predict_result{
     width: 16.8vw;
     height:132px ;
     flex-shrink: 0;
     border-radius: 20px;
     background: #FFF;
     border:none;
+    font-family: "Montserrat Alternates";
+    font-size: 21px;
+    font-weight: 500;
+    text-align: center;
+    display: flex;
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    
+}
+
+.resulttext {
+    margin-top: 30px;
+    /* vertical-align: middle; */
 }
 
 .Box1{
@@ -331,18 +332,25 @@ body{
     gap:10px;
 }
 .statisfied_or_not{
+    padding: 0;
+    margin: 21px 0 0 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-}
-.statisfied_or_not>.satisfied{
-    color: #EFEFEF;
-    background: #407BFF;
-}
-.statisfied_or_not>.not_satisfied{
+    
+    position: relative;
+    width: 17vw;
+    height: 168px;
+    border-radius: 25px;
     background: #D9D9D9;
-    color: #407BFF;
+    font-family: "Montserrat Alternates";
+    font-size: 21px;
+    font-weight: 500
+    
+}
+.satis{
+   margin: 15px 50px;
+   text-wrap: nowrap; 
 }
 
 
@@ -372,7 +380,10 @@ body{
     width: 36.7vw;
     height: 124px;
     background: #FFF;
-    border-radius: 30px;
+    border-radius: 10px;
+    /* word-wrap: break-word;
+    word-break: break-all; */
+    resize: none;
 }
 .WhiteDot{
     width: 1.2vw;
@@ -399,6 +410,7 @@ body{
     justify-content: center;
     margin: auto;
     margin-top: 30px;
+    margin-bottom: 30px;
     width: 24vw;
     height: 70px;
     border-radius: 24px;
