--- a/HMS/templates/2_patienthome.html
+++ b/HMS/templates/2_patienthome.html
@@ -7,7 +7,7 @@
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+    <link rel="stylesheet" href="../static/css/patienthome.css">
     <title>Patient Home</title>
 </head>
 <body>
@@ -16,9 +16,7 @@
             <img src="../static/public/logo.svg" alt="">
             <div class="logoname">MED.AI</div>
         </a>
-        <button id="logout" type="button">
-            Log Out
-        </button>
+        <a id="logout" href="logout"><button  type="button">Log Out</button></a>
 
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="Name Of Patient" maxlength="30" readonly>
@@ -31,12 +29,8 @@
     <div class="Container">
         <div class="LeftPart">
             <div class="Heart_Disease">My Dashboard</div>
-            <!-- <div class="ellipse10"> -->
-                <!-- <div class="ellipse11"> -->
                     <div class="HDisease_Prediction"><img
                             src="../static/public/My_Dashboard_Frame.svg" alt=""></div>
-                <!-- </div> -->
-            <!-- </div> -->
         </div>
 
 
@@ -51,17 +45,12 @@
                 <div class="Report_Box">
                     <div class="report_name">Report 1</div>
                     <div class="date_time_doctor">
-                        Date: xx/xx/xx Time: xx:xx:xx Doctor: Doctor1
+                        Date: xx/xx/xx &nbsp;&nbsp;&nbsp;&nbsp;Time: xx:xx:xx &nbsp;&nbsp;&nbsp;&nbsp;Doctor: Doctor1
                     </div>
                     <button>Get Report</button>
                 </div>
             </div>
-        
-            
-            
-
         </div>
-    </div>
     </div>
 </form>
 
