--- a/HMS/static/css/patienthome.css
+++ b/HMS/static/css/patienthome.css
@@ -1,19 +1,18 @@
 @font-face {
     font-family: volko;
     src: url(../public/mudkty-wtvolkolakgrotesque-light.ttf);
-}
-*{
+  }
+  *{
     margin: 0;
     line-height: normal;
     box-sizing: border-box;
-}
-body{
+  }
+  body{
     position: relative;
     background-color: #EFEFEF;
     overflow-x: hidden;
-    /* height: 2000px; */
-}
-.background1{
+  }
+  .background1{
     width: 38vw;
     height: 38vw;
     position: absolute;
@@ -22,127 +21,131 @@ body{
     filter: blur(200px);
     right: -8vw;
     top: -150px;
-}
-.logo{
+  }
+  .logo{
     text-decoration: none;
-}
-.logoname{
+  }
+  .logo img{
+    width: 4.75vw;
+  }
+  .logoname{
     color: #000;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.33vw;
     font-style: normal;
     font-weight: 600;
     font-family: "MADEEvolveSansEVO";
     line-height: normal;
-}
-.header{
-    /* display: static; */
-    position: relative;
+  }
+  .header{
     display:flex;
-    margin-left:6.2vw;
-    margin-right:6.2vw;
-    margin-top:48px;
+    position: relative;
+    margin-left: 6.2vw;
+    margin-top:3.2vw;
+    margin-right: 6vw;
     align-items: center;
-}
-
-#logout{
+  }
+  #logout{
     display: flex;
-    position: absolute;
-    left: 10.5vw;
-    align-items: center;
     width:10vw;
-    height: 53px;
+    height: 3.5vw;
+    margin-left: 5.7vw;
+    align-items: center;
+    text-decoration: none;
+  }
+  #logout button{
+    width: 100%;
+    height: 100%;
     border-radius: 28.5px;
     background: #FFF;
-    margin-right:25.6vw;
-    justify-content: center;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 20px;
+    font-size: 1.33vw;
     font-weight: 400;
     border:none;
     cursor: pointer;
   }
-
-  #logout:hover {
-    background-color: blue; /* Change background color on hover */
-    color: #fff; /* Change text color on hover */
-  }
-
   
-.Doctor_Name{
+  #logout button:hover {
+    background-color: blue;
+    color: #fff;
+  }
+  
+  .Doctor_Name{
     display: flex;
     position: absolute;
     right: 0px;
     align-items: center;
     width:25vw;
-    height: 53px;
+    height: 3.5vw;
     border-radius: 28.5px;
     background: #FFF;
-    gap:6.28vw;
-    margin-left:29vw;
-}
-.Doctor_Name img{
-    background-color: #EFEFEF;
-    border-radius: 40%;
-}
-.doctorNameInput{
+    margin-left:20vw;
+  }
+  .doctorNameInput{
     background: #FFF;
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 23px;
+    font-size: 1.33vw;
     font-weight: 400;
-    width:13vw;
-    height:29px;
+    width:14vw;
+    height:2vw;
     margin-left:1.8vw;
-}
-
-
-/*   ---------------------Left Part----------------------       */
-
-
-.Container{
-    margin-top: 43px;
+  }
+  .Doctor_Name img{
+    position: absolute;
+    right: 0;
+    background-color: #EFEFEF;
+    border-radius: 40%;
+    width: 3vw;
+  }
+  
+  /* Left Part */
+        
+  .Container{
+    margin-top: 2.8vw;
     display: flex;
-}
-.LeftPart{
+    margin-bottom: 3.3vw;
+  }
+  .LeftPart{
     display:flex;
-    margin-top: 25px;
     margin-left: 6.2vw;
+    margin-top: 1.67vw;
     flex-direction:column;
-    margin-right: 5vw;
-}
-.Heart_Disease{
+  }
+  .Heart_Disease{
     width:22.7vw;
-    height:190px;
+    height:12.7vw;
     color: #000;
     font-family: volko;
-    font-size: 90px;
+    font-size: 6vw;
     line-height: 100%; /* line height -> sets distance between lines of text*/
-}
-.HDisease_Prediction{
+  }
+  .HDisease_Prediction{
     width:32.7vw;
     height:24.5vw;
     align-items: center;
     flex-shrink: 0;
-    margin-top:53px;
-}
-.HDisease_Prediction img{
+    margin-top:3.5vw;
+  }
+  .HDisease_Prediction img{
     width: 100%;
-}
+  }
 
 
 /*   ---------------------Right Part----------------------       */
 
-
+.RightPart{
+  margin-left: 6vw;
+}
 .Param{
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-top: 1.33vw;
+    margin-bottom: 2vw;
     display:flex;
-    gap:9px;
+    gap:0.6vw;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 1.33vw;
 }
 .BlueDot{
     width: 1.4vw;
@@ -152,56 +155,56 @@ body{
 }
 .Parameters{
     font-family: "Montserrat Alternates";
-    font-size: 30px;
+    font-size: 2vw;
     font-weight: 600;
 }
 .Scrollable_Content{
     width: 52vw;
-    height: 772px;
-    border-radius: 15px;
+    height: 45vw;
+    border-radius: 1vw;
     overflow-y: scroll;
     background: #ebdddd4c;
 }
 .Scrollable_Content::-webkit-scrollbar{ 
-    width: 10px;
+    width: 0.66vw;
 }
 .Scrollable_Content::-webkit-scrollbar-track{ 
     background-color: #d7cbcb4c;
 }
 .Scrollable_Content::-webkit-scrollbar-thumb{ 
     background-color: #a59a9a4c;
-    border-radius: 7px;
+    border-radius: 0.5vw;
 }
 .Report_Box{
     display: flex;
     flex-direction: column;
     width: 49.5vw;
-    height: 168px;
+    height: 11.23vw;
     margin: auto;
-    margin-top: 21px;
-    padding-left: 6.3vw;
-    border-radius: 35px;
+    margin-top: 1.4vw;
+    padding-left: 5vw;
+    border-radius: 2.34vw;
     background: #d0cece;
     color: #0D0C0C;
     font-family: Montserrat Alternates;
-    font-size: 24px;
+    font-size: 1.6vw;
     font-weight: 500;
 }
 .Report_Box .report_name{
-    margin-top: 18px;
+    margin-top: 1.2vw;
 }
 .Report_Box .date_time_doctor{
-    margin-top: 15px;
+    margin-top: 1vw;
 }
 .Report_Box button{
     width: 36.8vw;
-    height: 43px;
-    margin-top: 15px;
-    border-radius: 15px;
+    height: 2.8vw;
+    margin-top: 1vw;
+    border-radius: 1vw;
     background: #FFF;
     border: none;
     color: #0D0C0C;
     font-family: Montserrat Alternates;
-    font-size: 24px;
+    font-size: 1.6vw;
     font-weight: 500;
 }
