--- a/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
@@ -19,8 +19,8 @@ body{
     border-radius: 19vw;
     background: rgba(121, 162, 255, 0.60);
     filter: blur(200px);
-    right: -8vw;
-    top: -150px;
+    right: -7vw;
+    top: -7vw;
 }
 .background2{
     position: absolute;
@@ -40,7 +40,7 @@ body{
 .logoname{
     color: #000;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.4vw;
     font-style: normal;
     font-weight: 600;
     font-family: "MADEEvolveSansEVO";
@@ -52,21 +52,23 @@ body{
     display:flex;
     margin-left:6.2vw;
     margin-right:6.2vw;
-    margin-top:48px;
+    margin-top: 3vw;
     align-items: center;
+    height: 3vw;
+    width: 87vw;
 }
 
 .Patient_ID{
     display: flex;
     position: absolute;
     right: 0px;
-    align-items: center;
     width:17.71vw;
-    height: 53px;
-    border-radius: 28.5px;
+    height: 4vw;
+    border-radius: 3vw;
     background: #FFF;
     margin-right:25.6vw;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .patient_id_input{
@@ -74,11 +76,10 @@ body{
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 400;
     width:8.4vw;
-    height:29px;
-    
+    height: 3vw;
 }
 
 .Doctor_Name{
@@ -87,8 +88,8 @@ body{
     right: 0px;
     align-items: center;
     width:25vw;
-    height: 53px;
-    border-radius: 28.5px;
+    height: 4vw;
+    border-radius: 3vw;
     background: #FFF;
     gap:6.28vw;
     margin-left:29vw;
@@ -102,10 +103,10 @@ body{
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 400;
     width:13vw;
-    height:29px;
+    height: 3vw;
     margin-left:1.8vw;
 }
 
@@ -113,22 +114,24 @@ body{
 
 
 .Container{
-    margin-top: 43px;
+    margin-top: 3vw;
     display: flex;
+    flex-direction: row;
 }
 .LeftPart{
     display:flex;
-    margin-top: 25px;
+    margin-top: 3vw;
     margin-left: 6.2vw;
     flex-direction:column;
     margin-right: 5vw;
 }
 .Heart_Disease{
-    width:22.7vw;
-    height:190px;
+    width: 20vw;
+    height: 11vw;
     color: #000;
     font-family: volko;
-    font-size: 90px;
+    font-size: 6.5vw;
+    align-content: center;
     line-height: 100%; /* line height -> sets distance between lines of text*/
 }
 .HDisease_Prediction{
@@ -147,9 +150,10 @@ body{
 
 
 .RightPart{
+    margin-top: 2vw;
     width: 52vw;
-    height: 772px;
-    border-radius: 15px;
+    height: 50vw;
+    border-radius: 2vw;
     overflow-y: scroll;
     background: #d7cbcb4c;
 }
@@ -164,11 +168,11 @@ body{
     border-radius: 7px;
 }
 .Param{
-    margin-top: 20px;
+    margin-top: 1.5vw;
     display:flex;
-    gap:9px;
+    gap: 0.8vw;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 2vw;
 }
 .BlueDot{
     width: 1.4vw;
@@ -178,29 +182,28 @@ body{
 }
 .Parameters{
     font-family: "Montserrat Alternates";
-    font-size: 30px;
+    font-size: 2.2vw;
     font-weight: 600;
 }
 .grid-container {
-    margin-top: 32px;
-    margin-left: 20px;
+    margin-top: 2vw;
     display: grid;
     column-gap: 1.33vw;
     row-gap: 3.4vw;
     grid-template-columns: 11.3vw 11.3vw 11.3vw 11.3vw;
     grid-template-rows: 11.3vw 11.3vw;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 }
 .grid-item{
     position: relative;
     width: 11.3vw;
-    height: 168px;
-    border-radius: 25px;
-    padding-top: 17px;
+    height: 13vw;
+    border-radius: 2.5vw;
+    padding-top: 1.5vw;
     background: #D9D9D9;
     font-family: "Montserrat Alternates";
-    font-size: 21px;
+    font-size: 1.5vw;
     font-weight: 500;
 }
 
@@ -208,18 +211,20 @@ body{
     text-align: center;
     word-break: normal;
     white-space: wrap;
+    height: 2.5vw;
+    font-size: 1.6vw;
 }
 .grid-item .input2{
     text-align: center;
     display: flex;
     position: absolute;
-    bottom: 40px;
-    font-size: 20px;
+    top: 6vw;
+    font-size: 1.5vw;
     font-weight: 600;
     width: 8.8vw;
-    height: 43px;
+    height: 3.5vw;
     margin-left: 1vw;
-    border-radius: 15px;
+    border-radius: 1vw;
     background: #FFF;
     border:none;
 }
@@ -229,19 +234,19 @@ body{
 }
 .grid-item .dropdown{
     width: 8.8vw;
-    height: 43px;
+    height: 3.5vw;
     border: none;
-    border-radius: 8px;
+    border-radius: 1vw;
     margin-left: 1vw;
     position: absolute;
-    bottom: 40px;
+    top: 6vw;
 }
 .radio-buttons{
-    margin-top: 25px;
+    margin-top: 2vw;
 }
 .form-check{
     margin: auto;
-    width: 100px;
+    width: 7vw;
 }
 
 
@@ -249,20 +254,20 @@ body{
 
 .predictandreset{
     width: 36.7vw; /* 550px */
-    height: 70px;
+    height: 5vw;
     display: flex;
     margin: auto;
-    margin-top: 70px;
-    margin-bottom: 50px;
+    margin-top: 6vw;
+    margin-bottom: 1vw;
     gap: 1.3vw;
 }
 .button1{
     width: 18.1vw;
-    height: 70px;
-    border-radius: 24px;
+    height: 5vw;
+    border-radius: 1.5vw;
     border: none;
     font-family: Montserrat Alternates;
-    font-size: 30px;
+    font-size: 2.5vw;
     font-weight: 600;
     cursor: pointer;
 }
@@ -420,4 +425,47 @@ body{
     font-size: 30px;
     font-weight: 600;
     border: none;
+}
+
+@media only screen and (max-width: 720px) {
+    .Container{
+        flex-direction: column;
+        width: 10vw;
+    }
+    /* .Patient_ID{
+        display:none;
+    }
+    .Doctor_Name{
+        display:none;
+    } */
+    .background1{
+        display:none;
+    }
+    .RightPart{
+        width: 94vw;
+        margin-left: 1.5vw;
+        margin-top: -20vw;
+    }
+    .grid-container{
+        column-gap: 12vw;
+        row-gap: 4vw;
+        margin-left: -9vw;
+    }
+    .Heart_Disease{
+        position: relative;
+        width: 20vw;
+        top: 6vw;
+        font-size: 8vw;
+    }
+    .grid-item{
+        width: 21vw;
+    }
+    .HDisease_Prediction img {
+        position: relative;
+        top: -25vw;
+        left: 50vw;
+    }
+    .grid-item div{
+        font-size: 2.2vw;
+    }
 }
