--- a/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/form_and_prediction.css
@@ -10,7 +10,6 @@ body{
     position: relative;
     background-color: #EFEFEF;
     overflow-x: hidden;
-    /* height: 2000px; */
 }
 .background1{
     width: 38vw;
@@ -21,18 +20,6 @@ body{
     filter: blur(200px);
     right: -7vw;
     top: -7vw;
-}
-.background2{
-    /* position: absolute; */
-    /* border-radius: 19vw; */
-    /* width: 38vw; */
-    /* height: 38vw; */
-    /* background: rgba(121, 162, 255, 0.60); */
-    /* filter: blur(200px); */
-    /* transform: rotate(90deg); */
-/*    left: -8vw;*/
-/*    top: 500px;*/
-/*    z-index: -1;*/
 }
 .logo{
     text-decoration: none;
@@ -46,67 +33,66 @@ body{
     font-family: "MADEEvolveSansEVO";
     line-height: normal;
 }
+.logo img{
+    width: 4.7vw;
+}
 .header{
-    /* display: static; */
     position: relative;
     display:flex;
     margin-left:6.2vw;
     margin-right:6.2vw;
-    margin-top: 2vw;
+    margin-top: 3.2vw;
     align-items: center;
-    height: 3vw;
-    width: 87vw;
 }
-
 .Patient_ID{
     display: flex;
     position: absolute;
     right: 0px;
     width:17.71vw;
-    height: 4vw;
-    border-radius: 3vw;
+    height: 3.5vw;
+    border-radius: 1.9vw;
     background: #FFF;
-    margin-right:25.6vw;
+    right: 25.5vw;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
-.patient_id_input{
-    background: #FFF;
+.Patient_ID input{
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
     font-size: 1.5vw;
     font-weight: 400;
-    width:8.4vw;
-    height: 3vw;
+    width:8.42vw;
+    height: 1.93vw;
 }
 
 .Doctor_Name{
     display: flex;
     position: absolute;
     right: 0px;
-    align-items: center;
-    width:25vw;
-    height: 4vw;
-    border-radius: 3vw;
+    width:24vw;
+    height: 3.5vw;
+    border-radius: 1.9vw;
     background: #FFF;
-    gap:6.28vw;
-    margin-left:29vw;
+    align-items: center;
 }
 .Doctor_Name>img{
+    position: absolute;
+    width: 2.94vw;
+    right:0.33vw; 
     background-color: #EFEFEF;
-    border-radius: 40%;
+    border-radius: 50%;
 }
-.doctorNameInput{
+.Doctor_Name input{
     background: #FFF;
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
     font-size: 1.5vw;
     font-weight: 400;
-    width:13vw;
-    height: 3vw;
+    width:17vw;
+    height: 1.93vw;
     margin-left:1.8vw;
 }
 
@@ -114,20 +100,20 @@ body{
 
 
 .Container{
-    margin-top: 3vw;
     display: flex;
-    flex-direction: row;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
 }
 .LeftPart{
     display:flex;
-    margin-top: 1vw;
+    margin-top: 2vw;
     margin-left: 6.2vw;
     flex-direction:column;
     margin-right: 5vw;
 }
 .Heart_Disease{
-    width: 20vw;
-    height: 10vw;
+    width: 29vw;
+    height: 12.7vw;
     color: #000;
     font-family: volko;
     font-size: 6vw;
@@ -135,11 +121,11 @@ body{
     line-height: 100%; /* line height -> sets distance between lines of text*/
 }
 .HDisease_Prediction{
-    width:32.7vw;
-    height:24.5vw;
+    width:32.8vw;
+    height:32.8vw;
     align-items: center;
     flex-shrink: 0;
-    margin-top:53px;
+    margin-top:4.47vw;
 }
 .HDisease_Prediction img{
     width: 100%;
@@ -152,25 +138,26 @@ body{
 .RightPart{
     margin-top: 2vw;
     width: 52vw;
-    height: 45vw;
-    border-radius: 2vw;
+    height: 50vw;
+    border-top-left-radius: 2vw;
+    border-bottom-left-radius: 2vw;
     overflow-y: scroll;
     background: #d7cbcb4c;
 }
 .RightPart::-webkit-scrollbar{ 
-    width: 10px;
+    width: 0.66vw;
 }
 .RightPart::-webkit-scrollbar-track{ 
     background-color: #d7cbcb4c;
 }
 .RightPart::-webkit-scrollbar-thumb{ 
     background-color: #a59a9a4c;
-    border-radius: 7px;
+    border-radius: 0.46vw;
 }
 .Param{
     margin-top: 1.5vw;
     display:flex;
-    gap: 0.8vw;
+    gap: 0.6vw;
     align-items: center;
     margin-left: 2vw;
 }
@@ -182,70 +169,72 @@ body{
 }
 .Parameters{
     font-family: "Montserrat Alternates";
-    font-size: 2.2vw;
+    font-size: 2vw;
     font-weight: 600;
 }
 .grid-container {
-    margin-top: 2vw;
+    margin-top: 2.5vw;
     display: grid;
-    column-gap: 1.33vw;
-    row-gap: 3.4vw;
-    grid-template-columns: 11.3vw 11.3vw 11.3vw 11.3vw;
-    grid-template-rows: 11.3vw 11.3vw;
+    grid-template-columns: 11.36vw 11.36vw 11.36vw 11.36vw;
+    grid-template-rows: 11.36vw 11.36vw;
+    row-gap: 3.27vw;
+    column-gap: 1.47vw;
     justify-content: center;
     align-items: stretch;
 }
 .grid-item{
     position: relative;
-    width: 11.3vw;
-    height: 13vw;
+    width: 11.36vw;
+    height: 11.23vw;
     border-radius: 2.5vw;
-    padding-top: 1.5vw;
+    padding-top: 1.13vw;
     background: #D9D9D9;
     font-family: "Montserrat Alternates";
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     font-weight: 500;
 }
-
 .grid-item div{
     text-align: center;
     word-break: normal;
     white-space: wrap;
-    height: 2.5vw;
-    font-size: 1.6vw;
+    /* height: 2.5vw; */
+    font-size: 1.3vw;
 }
 .grid-item .input2{
     text-align: center;
     display: flex;
     position: absolute;
-    top: 6vw;
+    top: 6.8vw;
     font-size: 1.5vw;
     font-weight: 600;
     width: 8.8vw;
-    height: 3.5vw;
-    margin-left: 1vw;
+    height: 2.87vw;
+    margin-left: 1.3vw;
     border-radius: 1vw;
     background: #FFF;
     border:none;
 }
 .grid-item .input2::placeholder{
-    font-size: 20px;
+    font-size: 1.5vw;
     color: #bab6b6;
 }
 .grid-item .dropdown{
+    position: absolute;
     width: 8.8vw;
     height: 3.5vw;
     border: none;
     border-radius: 1vw;
     margin-left: 1vw;
-    position: absolute;
     top: 6vw;
+    text-align: center;
 }
 .radio-buttons{
+    position: absolute;
+    bottom: 1.2vw;
     margin-top: 2vw;
+    margin-left: 2vw;
 }
 .form-check{
-    margin: auto;
     width: 7vw;
 }
 
@@ -253,23 +242,21 @@ body{
 /* -------------- Predict and Reset -------------- */
 
 .predictandreset{
-    width: 36.7vw; /* 550px */
-    height: 5vw;
+    width: 36.7vw;
     display: flex;
     margin: auto;
-    margin-top: 5vw;
-    margin-bottom: 1vw;
+    margin-top: 4.8vw;
     gap: 1.3vw;
 }
 .button1{
-    width: 18.1vw;
-    height: 5vw;
-    border-radius: 1.5vw;
-    border: none;
+    width: 17.7vw;
+    height: 4.67vw;
+    border-radius: 1.6vw;
     font-family: Montserrat Alternates;
-    font-size: 2.5vw;
+    font-size: 2vw;
     font-weight: 600;
     cursor: pointer;
+    border: none;
 }
 .predictandreset>.predict{
     color: #EFEFEF;
@@ -427,40 +414,52 @@ body{
     border: none;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 1100px) {
     .Container{
+        display: flex;
         flex-direction: column;
         width: 10vw;
     }
-    .background1{
-        display:none;
+    .Heart_Disease{
+        position: relative;
+        top: 6vw;
+        left: 5vw;
+        font-size: 6vw;
+    }
+    .HDisease_Prediction img{
+        position: relative;
+        width: 30vw;
+        top: -20vw;
+        left: 50vw;
     }
     .RightPart{
-        width: 94vw;
-        margin-left: 1.5vw;
-        margin-top: -10vw;
+        width: 96vw;
+        height: 400px;
+        margin-left: 2.2vw;
+        margin-top: -20vw;
     }
     .grid-container{
+        grid-template-columns: 11.36vw 11.36vw 11.36vw 11.36vw;
+        grid-template-rows: 96px 96px;
+        height: 200px;
         column-gap: 12vw;
         row-gap: 4vw;
         margin-left: -9vw;
     }
-    .Heart_Disease{
-        position: relative;
-        width: 20vw;
-        top: 9vw;
-        font-size: 8vw;
-    }
     .grid-item{
-        width: 21vw;
-    }
-    .HDisease_Prediction img {
-        position: relative;
-        top: -20vw;
-        left: 50vw;
+        width: 22vw;
+        height: 96px;
     }
     .grid-item div{
-        font-size: 2.2vw;
-        height: 3vw;
+        font-size: 1.5vw;
+    }
+    .grid-item .radio-buttons{
+        left: 6vw;
+    }
+    .grid-item .input2{
+        left: 6vw;
+    }
+    .grid-item .dropdown{
+        left: 6vw;
     }
 }
