--- a/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/psignup.css
@@ -30,9 +30,6 @@
     white-space: nowrap; 
     padding: 10px 15px; 
 }
-
-
-
 .welcome{
     position: relative;
     z-index: 1;
@@ -66,10 +63,15 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    padding-left: 5rem;
-    padding-top: 3rem;
+    margin-top:5.3vh;
+    margin-left: 5rem;
+    width:375px;
+    height:29px;
 }
 
+.error{
+    margin-left: 5rem;
+}
 .main{
     display: flex;
     margin-left: 5rem;
@@ -77,7 +79,6 @@
 
 .form{
     display: flex;
-    height: 625px;
 }
 
 .names {
@@ -85,23 +86,26 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-    padding-right: 10px;
-    padding-top: 25px;
+    gap:4.2vh;
 }
 
 .input {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 4%;
+    /* justify-content: center; */
+    gap: 3.99vh;
     z-index: 1;
+    
 }
 
 #row{
     display: flex;
     width: 100%;
-    padding: 11% 0 10.5% 0;
+    height: 3.2rem;
+    /* margin-top: 9px; */
+    align-items: center;
+   
 }
 
 #fields{
@@ -111,6 +115,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    
 }
 
 #apostrophe{
@@ -123,13 +128,22 @@
 }
 
 #textbox{
-    width: 19.5625rem;
+    width:21vw;
     height: 3.2rem;
     flex-shrink: 0;
     border-radius: 17px;
     background: #D9D9D9;
     display: flex;
-    justify-self: right;
+    border:none;
+    justify-content: center;
+    text-align: center;
+    font-size:18px;
+}
+
+
+#textbox\ file {
+    height: 2rem;
+    margin-top: 10px;
 }
 
 .image{
@@ -155,14 +169,23 @@
     filter: blur(120px);
 }
 .back2{
-    position: relative;
     z-index: 0;
+    display: flex;
+    position: absolute;
+    bottom: -57rem;
+    right: 0rem;
+    width: 20rem;
+    height: 28rem;
+    flex-shrink: 0;
+    border-radius: 602px;
+    background: rgba(121, 162, 255, 0.60);
+    filter: blur(120px);
 }
-.back2 img{ 
-    position: fixed;
+/* .back2 img{ 
+    position: relative;
     right: 0px;
     bottom: 0px;
-}
+} */
 
 .align{
     white-space: nowrap;
@@ -184,6 +207,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    border:none;
+    cursor: pointer;
 }
 
 /* .log{
